--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_register.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_register.xml
@@ -76,7 +76,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Registration*"
+        android:text="Registration"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
