--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant.xml
@@ -16,8 +16,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Hallo Gebruiker.\n Je hebt nog geen plant geselecteerd :("
         android:gravity="center"
+        android:text="Hello User! You have not selected a plant yet :("
         android:textAllCaps="false"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -29,15 +29,15 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="173dp"
-        android:layout_height="60dp"
+        android:layout_width="184dp"
+        android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Kies je plant"
+        android:text="Choose your plant"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
